--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=27017
-DB=mongodb://kobe:0Xk1xKTcv5w1feNA@14.52.172.12:27017/whoRu_DB
+# DB=mongodb://kobe:0Xk1xKTcv5w1feNA@14.52.172.12:27017/whoRu_DB
+DB=mongodb+srv://kobe:0Xk1xKTcv5w1feNA@cluster0.5etdudq.mongodb.net/
