:closed_lock_with_key: Chore: add access erick path
접속을 허가할 호스트 path 생성.

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=27017
 DB=mongodb+srv://kobe:0Xk1xKTcv5w1feNA@cluster0.5etdudq.mongodb.net/
+AccessErick=mongodb+srv://Erick:caH5tRiz0vy7P5Er@cluster0.5etdudq.mongodb.net/
