:sparkles: Build: 백앤드 세팅, DB 연결 테스트.
DB, WebSocket 셋팅, DB 연결 테스트 완료.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT=27017
-DB=mongodb+srv://kobe:0Xk1xKTcv5w1feNA@cluster0.5etdudq.mongodb.net/
-AccessErick=mongodb+srv://Erick:caH5tRiz0vy7P5Er@cluster0.5etdudq.mongodb.net/
+PORT=5001
+DB=mongodb+srv://devskyachieve91:Cz615uR5mvo0Apkr@cluster0.qt49kur.mongodb.net/
+# AccessHost="http://localhost:3000"
+# H!+sjDtBX2z?h%q
